app/assets/stylesheets/login.scss
@import "colors";
$margin: 20px;

.content {
  margin-top: -80px;
  display: flex;
  justify-content: space-around;
  flex-flow: column;
  width: 100%;
  height: 100vh;
}

.login-box {
  background-color: $primary-color;
  border-radius: 5px;
  margin: 0 auto;
  display: flex;
  flex-flow: column;
  width: 400px;
  box-shadow: $box-shadow;
  a {
    font-size: 8px;
    align-self: center;
    color: $primary-color-text;
    &:visited{
      color: $primary-color-text;
    }
    &:hover{
      color: $primary-accent-color;
    }
  }
}

.login-field {
  margin: $margin;
  input {
    border-radius: 3px;
    padding: 12px;
    width: 100%;
    border: 0;
    box-sizing: border-box;
    box-shadow: $box-shadow;
  }
}

.remember-login-row {
  margin: $margin+10 $margin $margin $margin;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
}

.remember-me {
  flex-grow: 2;
  display: flex;
  align-self: center;
  white-space: nowrap;
}

